--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,14 +1,239 @@
-
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
-
 // Variables
 @import "variables";
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
+.app-container {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.info-container-fluid {
+  padding: 30px;
+  overflow-y: auto;
+  height: 100vh;
+}
+
+.temperature {
+  margin-right: 50px;
+
+  .temp {
+    font-size: 4em;
+    font-weight: 700;
+    margin-bottom: 0;
+    line-height: 1;
+  }
+
+  .apparent-temp {
+    margin-bottom: 0;
+    margin-top: 5px;
+  }
+}
+
+.summary {
+  font-weight: 700;
+}
+
+.chat-box {
+  background: url('/images/bg.jpg') repeat;
+  height: 100vh;
+  background-size: 75%;
+  position: relative;
+  border-right: 1px solid #CCC;
+
+  .chat-input {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(255, 255, 255, 0.75);
+    padding: 15px;
+    line-height: 0;
+    border-top: 1px solid #CCC;
+  }
+
+  .chat-content {
+    padding: 10px 20px;
+    overflow-y: auto;
+    height: calc(100vh - 90px);
+    overflow-x: hidden;
+
+    > ul {
+      margin: 0;
+      list-style-type: none;
+      padding-left: 0;
+
+      li {
+        + li {
+          margin-top: 10px;
+        }
+      }
+    }
+
+    .text {
+      width: 80%;
+      background: #FFF;
+      padding: 10px;
+      position: relative;
+
+      &:before, &:after {
+        top: 50%;
+        border: solid transparent;
+        content: " ";
+        height: 0;
+        width: 0;
+        position: absolute;
+        pointer-events: none;
+      }
+
+      &:before {
+        border-width: 11px;
+        margin-top: -11px;
+      }
+
+      &:after {
+        border-width: 10px;
+        margin-top: -10px;
+      }
+    }
+
+    .user-msg {
+      float: left;
+      border: 1px solid #AAA;
+
+      &:before, &:after {
+        right: 100%;
+      }
+
+      &:before {
+        border-color: rgba(170, 170, 170, 0);
+        border-right-color: #AAAAAA;
+      }
+
+      &:after {
+        border-color: rgba(255, 255, 255, 0);
+        border-right-color: #FFF;
+      }
+    }
+
+    .watson-msg {
+      float: right;
+      text-align: right;
+      color: #5aaafa;
+      border: 1px solid #5aaafa;
+
+      &:before, &:after {
+        left: 100%;
+      }
+
+      &:before {
+        border-color: rgba(90, 170, 250, 0);
+        border-left-color: #5aaafa;
+      }
+
+      &:after {
+        border-color: rgba(255, 255, 255, 0);
+        border-left-color: #FFF;
+      }
+    }
+
+    .weather-info {
+      float: right;
+      width: 580px;
+      border: 2px solid #5aaafa;
+      background: #FFF;
+
+      .content {
+        padding: 10px;
+        width: 475px;
+
+        .temperature {
+          border-right: 1px solid #AAA;
+          margin-right: 10px;
+          padding-right: 10px;
+        }
+      }
+
+      .temperature {
+        margin: 0;
+      }
+    }
+
+    .news {
+      margin-bottom: 10px;
+
+      .image {
+        width: 200px;
+        float: left;
+      }
+
+      .content {
+        background: #FFF;
+        height: auto;
+        border-color: #5aaafa;
+
+        &:after {
+          content: normal;
+        }
+
+        .text {
+          width: 100%;
+          padding: 0;
+        }
+      }
+    }
+  }
+}
+
+.chat-form {
+  display: flex;
+  justify-content: space-between;
+
+  input {
+    width: 100%;
+    line-height: 1.25em;
+    padding: 15px;
+  }
+}
+
+.articles {
+  .news {
+    margin-bottom: 30px;
+  }
+
+  .content {
+    overflow: hidden;
+    padding: 10px;
+    height: 250px;
+    border: 1px solid #CCC;
+    position: relative;
+    text-align: justify;
+
+    &:after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 100px;
+      background: -moz-linear-gradient(top, rgba(255,255,255,0.5) 50%, rgba(255,255,255,1) 100%);
+      background: -webkit-linear-gradient(top, rgba(255,255,255,0.5) 50%,rgba(255,255,255,1) 100%);
+      background: linear-gradient(to bottom, rgba(255,255,255,0.5) 50%,rgba(255,255,255,1) 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ffffff', endColorstr='#ffffff',GradientType=0 );
+    }
+  }
+
+  .image {
+    height: 180px;
+    background-size: cover;
+    background-position: center;
+  }
 }
